--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,9 @@
-**/__snapshots__/** linguist-generated=true
+*.md merge=ignore
+LICENSE* merge=ignore
+NOTICE* merge=ignore
+.github/ISSUE_TEMPLATE/* merge=ignore
+.github/ISSUE_TEMPLATE/**/* merge=ignore
+.github/CODEOWNERS merge=ignore
+.github/*.yml merge=ignore
+.github/*.md merge=ignore
+.eliatra/**/* merge=ignore
