--- a/src/core/server/core_app/assets/favicons/manifest.json
+++ b/src/core/server/core_app/assets/favicons/manifest.json
@@ -13,7 +13,7 @@
             "type": "image/png"
         }
     ],
-    "theme_color": "#003553",
-    "background_color": "#003553",
+    "theme_color": "#00796B",
+    "background_color": "#00796B",
     "display": "standalone"
 }
